--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,7 @@ header {
 
 h1 {
     font-size: 5em;
+    margin: 15px;
 }
 
 h3 {
@@ -35,6 +36,7 @@ li {
 }
 
 #input-box { 
+    border: 1px solid;
     width: 300px;
     height: 27px;
     margin: 10px; 
